--- a/templates/index.html
+++ b/templates/index.html
@@ -119,13 +119,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">我的可转债</a>
                     <ul class="dropdown-menu">
                       <li><a href="/view_my.html">可转债持仓数据</a></li>
-                      <li><a href="/view_up_down.html">同步更新持仓数据</a></li>
+                      <li><a href="/update_hold_bond.html">同步更新持仓数据</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">实时更新</a>
                     <ul class="dropdown-menu">
-                      <li><a href="/jsl_update_data.html">同步集思录可转债数据</a></li>
+                      <li><a href="/jsl_update_data.html">直接同步集思录可转债数据</a></li>
+                      <li><a target="_blank" href="https://www.jisilu.cn/data/cbnew/cb_list/">访问集思录JSON格式数据</a></li>
+                      <li><a href="/sync_jsl_bond_data.html">提交集思录JSON格式数据</a></li>
                       <li><a href="/view_up_down.html">可转债涨跌数据</a></li>
                     </ul>
                 </li>
