--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>可转债数据</title>
+  <title>可转债投资助手</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon"  href="/static/img/favicon.ico">
@@ -133,6 +133,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                       <li><a href="/stock_xueqiu.html">同步雪球正股财报指标</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">导入导出</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/upload_db_data.html">数据导入</a></li>
+                      <li><a href="/download_db_data.html">数据导出</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="/logout.html">退出</a></li>
                 {% endif %}
 
             </ul>
