--- a/templates/update_hold_bond.html
+++ b/templates/update_hold_bond.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" href="/img/favicon.ico">
+        <link rel="icon" href="/static/img/favicon.ico">
         <script src="https://code.z01.com/v4/dist/js/popper.min.js"></script>
         <link rel="stylesheet" href="https://code.z01.com/v4/dist/css/bootstrap.min.css" >
 
