--- a/templates/index.html
+++ b/templates/index.html
@@ -141,6 +141,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
                     </ul>
                 </li>
 
+                <li><a href="/update_database.html">数据库操作</a></li>
+
                 <li><a href="/logout.html">退出</a></li>
                 {% endif %}
 
